[package]
name = "nescookie"
version = "0.1.0"
edition = "2018"
description = "a netscape cookie file parser using pest"
license = "MIT"
repository = "https://github.com/snylonue/nescookie"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
cookie = "0.15"
time = "0.2.27"